# configToolForElectromter

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2360eac  CMakeLists.txt.user.cf89da5  CMakeLists.txt.user.e435e9b  CommunicationPage.qml  ConfigGenerator.cpp  ConfigGenerator.h  ConfigGenerator.qml  ConfigGenerator_BACKUP_1142.cpp  ConfigGenerator_LOCAL_902.cpp  ConfigGenerator_REMOTE_1710.cpp  ControlPage.qml  DLMSPage.qml  DevicePage.qml  DisplayPage.qml  Main.qml  MemoryPage.qml  MeteringPage.qml  MeteringPage_BACKUP_499.qml  MeteringPage_BASE_1298.qml  MeteringPage_LOCAL_1298.qml  README.md  TariffPage.qml  configurator.cpp  configurator.h  main.cpp  processhelper.cpp  processhelper.h  qml.qrc
configurations/: config_schema.json
